add botão para reset de senha

--- a/login.html
+++ b/login.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<title>Tela de login</title>
 		<link rel="stylesheet" href="./css/style.css">
 	</head>
 	<body>
@@ -9,8 +10,9 @@
 				<p>Por favor, insira suas credenciais.</p>
 				<input type="text" id="usuario" placeholder="Usuário" autofocus>
 				<input type="password" id="senha" placeholder="Senha">
-				<button>LOGIN</button>
-				<p class="mensagem"> Gostaria de se registrar? <a href="#">Criar uma conta</a></p> 
+				<button>login</button>
+				<p class="mensagem"> Gostaria de se registrar? <a href="#">Crie uma conta</a></p> 
+				<a href="http://xuxa.com.br"><p id="resetSenha">Esqueci minha senha</p></a>
 			</form>
 		</main>
 	</body>
